# AgenticAI

./: README.md  TODO  main.py  pyproject.toml  requirements.txt
agents/: analyst.py  researcher.py  writer.py
app/: api.py  main.py
app/agents/: analyst.py  researcher.py  writer.py
app/core/: router.py  workflow.py
app/supervisor/: decision.py
app/tools/: search_web.py  write_summary.py
core/: state.py  workflow.py
models/: llm.py
supervisor/: decision.py
